add dictionary-ref and performance measurements

--- a/pgbdd/Makefile
+++ b/pgbdd/Makefile
@@ -9,8 +9,8 @@ DATA       = pgbdd--0.0.1.sql
 
 
 # PG_CFLAGS  = -Ofast -DBDD_OPTIMIZE # switch off costly checks & optimize
-# PG_CFLAGS  = -g # for debugging
-PG_CFLAGS = -std=c11
+PG_CFLAGS  = -g # for debugging
+# PG_CFLAGS = -std=c11
 
 
 SRCBASE    = TAG_dictionary.c TAG_bdd.c TAG_utils.c TAG_vector.c
